--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+4.2.1
+    2017-08-31
+    Daniel Lorenz <https://github.com/extcode>
+
+    * BUGFIX #144: wrong label in billing address form
+
 4.2.0
     2017-08-20
     Daniel Lorenz <https://github.com/extcode>
