Added labels for phone, fax, additional

--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -253,6 +253,18 @@
                 <source>Country</source>
                 <target>Land</target>
             </trans-unit>
+            <trans-unit id="tx_cart_domain_model_order_address.phone">
+                <source>Phone</source>
+                <target>Telefon</target>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_order_address.fax">
+                <source>Fax</source>
+                <target>Fax</target>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_order_address.additional">
+                <source>Additional Fields</source>
+                <target>Zusätzliche Felder</target>
+            </trans-unit>
 
             <trans-unit id="tx_cart_domain_model_order_shipping">
                 <source>Shipping</source>
