--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+4.5.1
+    2017-11-21
+    Daniel Lorenz <https://github.com/siwa-pparzer>
+
+    * TASK #145: order view template bugs
+
 4.5.0
     2017-11-18
     Daniel Lorenz <https://github.com/siwa-pparzer>
