--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+4.7.0
+    2018-01-22
+    Daniel Lorenz <https://github.com/extcode>
+
+    * TASK #169: add ter upload to gitlab-ci pipeline
+
 4.6.0
     2018-01-22
     Daniel Lorenz <https://github.com/extcode>
