--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+4.7.3
+    2018-02-13
+    Daniel Lorenz <https://github.com/extcode>
+
+    * BUGFIX #174: wrong price calculation for configurable products with discount prices
+
 4.7.2
     2018-01-25
     Daniel Lorenz <https://github.com/extcode>
