--- a/Resources/Private/Language/de.locallang_db.xlf
+++ b/Resources/Private/Language/de.locallang_db.xlf
@@ -1150,6 +1150,10 @@
                 <source>Quantity Discount</source>
                 <target>Staffelpreis</target>
             </trans-unit>
+            <trans-unit id="tx_cart_domain_model_product_quantitydiscount.frontend_user_group">
+                <source>Website Usergroup</source>
+                <target>Website-Benutzergruppe</target>
+            </trans-unit>
             <trans-unit id="tx_cart_domain_model_product_quantitydiscount.price">
                 <source>Price</source>
                 <target>Preis</target>
