[BUGFIX] #178 - add translations for products module

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+4.7.7
+    2018-02-18
+    Daniel Lorenz <https://github.com/extcode>
+
+    * BUGFIX #178: add translations for products module
+
 4.7.6
     2018-02-16
     Daniel Lorenz <https://github.com/extcode>
