[BUGFIX] #201 - change some extension icons

--- a/Resources/Private/Language/de.locallang_db.xlf
+++ b/Resources/Private/Language/de.locallang_db.xlf
@@ -659,7 +659,7 @@
 
             <trans-unit id="tx_cart_domain_model_coupon">
                 <source>Coupons</source>
-                <target>Coupons</target>
+                <target>Gutscheine</target>
             </trans-unit>
             <trans-unit id="tx_cart_domain_model_coupon.title">
                 <source>Title</source>
