--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -714,6 +714,9 @@
             <trans-unit id="tx_cart_domain_model_order_address.company">
                 <source>Company</source>
             </trans-unit>
+            <trans-unit id="tx_cart_domain_model_order_address.tax_identification_number">
+                <source>Tax Identification Number</source>
+            </trans-unit>
             <trans-unit id="tx_cart_domain_model_order_address.street">
                 <source>Street</source>
             </trans-unit>
