--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+6.0.2
+    2018-12-21
+    Daniel Lorenz <https://github.com/extcode>
+
+    * BUGFIX #225: missing template for order statistic module
+
 6.0.1
     2018-12-05
     Daniel Lorenz <https://github.com/extcode>
