--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+5.0.1
+    2018-12-21
+    Daniel Lorenz <https://github.com/extcode>
+
+    * BUGFIX #225: missing template for order statistic module
+
 5.0.0
     2018-11-30
     Daniel Lorenz <https://github.com/extcode>
