--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -3,6 +3,7 @@
     <file source-language="en" datatype="plaintext" original="messages" date="2015-02-03T16:30:00Z" product-name="cart">
         <header/>
         <body>
+
             <trans-unit id="tx_cart.error.stock_handling.add">
                 <source>Desired number of this item not available.</source>
             </trans-unit>
@@ -850,6 +851,11 @@
             <trans-unit id="tx_cart.settings.allowed_countries.ch">
                 <source>Switzerland</source>
             </trans-unit>
+
+            <trans-unit id="tx_cart.add_to_cart_finisher.message.status.200.body">
+                <source>The product was added to cart.</source>
+            </trans-unit>
+
         </body>
     </file>
 </xliff>
