--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+5.1.0
+    2018-12-21
+    Daniel Lorenz <https://github.com/extcode>
+
+    * FEATURE #223: add addToCart form framework finisher
+
 5.0.1
     2018-12-21
     Daniel Lorenz <https://github.com/extcode>
