--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+5.1.1
+    2018-12-21
+    Daniel Lorenz <https://github.com/extcode>
+
+    * BUGFIX #225: move HTML file to new folder
+
 5.1.0
     2018-12-21
     Daniel Lorenz <https://github.com/extcode>
