--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+5.1.2
+    2019-01-16
+    Daniel Lorenz <https://github.com/extcode>
+
+    * BUGFIX #227: unit tests fails on self_accessor
+
 5.1.1
     2018-12-21
     Daniel Lorenz <https://github.com/extcode>
