[BUGFIX] fix javascript variable update_country in template
Resolves: #228

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,8 @@
 5.1.2
-    2019-01-16
+    2019-01-18
     Daniel Lorenz <https://github.com/extcode>
 
+    * BUGFIX #228: fix javascript variable update_country in template
     * BUGFIX #227: unit tests fails on self_accessor
 
 5.1.1
