[BUGFIX] Fix accept_terms_and_conditions label
Resolves: #226

--- a/Documentation/Misc/Changelog/5.1.3.rst
+++ b/Documentation/Misc/Changelog/5.1.3.rst
@@ -9,4 +9,5 @@
 All Changes
 ===========
 
+    2019-01-21 [BUGFIX] Fix accept_terms_and_conditions label (by oliverbeck)
     2019-01-21 [TASK] Add ViewHelper to show additionalData in views (by extcode)
