[BUGFIX] Fix list of changes in changelog
Resolves: #232

--- a/Documentation/Misc/Changelog/6.0.1.rst
+++ b/Documentation/Misc/Changelog/6.0.1.rst
@@ -9,4 +9,4 @@
 All Changes
 ===========
 
-    2018-12-05 [BUGFIX] initialize arguments in ViewHelper (by extcode)
+   - 2018-12-05 [BUGFIX] initialize arguments in ViewHelper (by extcode)
