--- a/Documentation/Misc/Changelog/6.1.0.rst
+++ b/Documentation/Misc/Changelog/6.1.0.rst
@@ -16,4 +16,4 @@ to get some more information from the participants like first and last name, twi
 All Changes
 ===========
 
-    2018-12-21 [FEATURE] add addToCart form framework finisher (by extcode)
+   - 2018-12-21 [FEATURE] add addToCart form framework finisher (by extcode)
