--- a/Documentation/Misc/Changelog/5.0.1.rst
+++ b/Documentation/Misc/Changelog/5.0.1.rst
@@ -9,4 +9,4 @@
 All Changes
 ===========
 
-    2018-12-21 [BUGFIX] missing template for order statistic module (by extcode)
+   - 2018-12-21 [BUGFIX] missing template for order statistic module (by extcode)
