--- a/Documentation/Misc/Changelog/5.1.1.rst
+++ b/Documentation/Misc/Changelog/5.1.1.rst
@@ -9,4 +9,4 @@
 All Changes
 ===========
 
-    2018-12-21 [BUGFIX] move HTML file to new folder (by extcode)
+   - 2018-12-21 [BUGFIX] move HTML file to new folder (by extcode)
