--- a/Documentation/Misc/Changelog/6.1.5.rst
+++ b/Documentation/Misc/Changelog/6.1.5.rst
@@ -3,10 +3,11 @@
 .. --------------------------------------------------
 .. -*- coding: utf-8 -*- with BOM.
 
-6.1.5 - 25.01.2018
+6.1.5 - 02.06.2018
 ------------------
 
 All Changes
 ===========
 
+   - 2019-02-06 [BUGFIX] Add missing translation (by extcode)
    - 2019-01-25 [BUGFIX] Fix cart order form template (by extcode)
