--- a/Documentation/Misc/Changelog/5.1.5.rst
+++ b/Documentation/Misc/Changelog/5.1.5.rst
@@ -9,4 +9,5 @@
 All Changes
 ===========
 
+   - 2019-02-06 [BUGFIX] Fix cart order form template (by extcode)
    - 2019-02-06 [BUGFIX] Add missing translation (by extcode)
