[BUGFIX] Update product in new backend variants
Set the correct product for new backend variants
when they added to cart. Changing the taxClasses
affect all backend variants.

Resolves: #256

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
     2019-08-10
     Daniel Gohlke <https://github.com/extcode>
 
+    * BUGFIX #256: change country only changes tax for first product variant
     * BUGFIX #257: change to nimut/testing-framework (v2.x)
 
 4.8.1
