[BUGFIX] Change translation typing error
Resolves: #280

--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -794,11 +794,11 @@
             </trans-unit>
             <trans-unit id="tx_cart.tax_vat">
                 <source>VAT</source>
-                <target>Umstatzsteuer</target>
+                <target>Umsatzsteuer</target>
             </trans-unit>
             <trans-unit id="tx_cart.tax_vat.value">
                 <source>VAT (%s %%)</source>
-                <target>Umstatzsteuer (%s %%)</target>
+                <target>Umsatzsteuer (%s %%)</target>
             </trans-unit>
 
             <trans-unit id="tx_cart_domain_model_cart_cart.net">
